--- a/src/components/styles/AuthForm.module.css
+++ b/src/components/styles/AuthForm.module.css
@@ -5,7 +5,8 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
+    background: rgb(31,0,41);
+    background: linear-gradient(90deg, rgba(31,0,41,1) 0%, rgba(69,8,85,1) 82%, rgba(88,3,100,1) 100%);
 }
 .wrapper {
     position: relative;
@@ -78,13 +79,13 @@
     font-size: 14px;
 }
 .remember label input {
-    accent-color: #f41579;
+    accent-color: #7a25b3;
 }
 .component button {
     position: relative;
     width: 100%;
     height: 40px;
-    background: #f4157e;
+    background: #580364;
     font-size: 16px;
     color: #fff;
     cursor: pointer;
@@ -92,6 +93,7 @@
     border: none;
     outline: none;
 }
+
 .signUpLink {
     font-size: 14px;
     text-align: center;
@@ -102,7 +104,7 @@
     text-decoration: none;
 }
 .signUpLink p a {
-    color: #f4157e;
+    color: #7a25b3;
     text-decoration: none;
     font-weight: 500;
 }
